--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Портфолио Junior верстальщицы</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
 
@@ -16,7 +16,7 @@
     <section class="hero-image">
       <div class="container">
       <h1 class="heading">Екатерина</h1>
-      <h3>Junior верстальщик</h3>
+      <h3>Junior верстальщица</h3>
 </div>
     </section>
 
